# game-of-life

./: CMakeLists.txt  README.md
includes/: graphic.h  logic.h  main.h  misc.h
scripts/: SDL.sh  build.sh  egypt.sh
src/: graphic.c  logic.c  main.c  misc.c
tests/: test_graphic.c  test_graphics.c  test_logic.c  test_misc.c
